html/css calc. maybe change to generate grid w/js->push objects from array?

--- a/index.html
+++ b/index.html
@@ -3,12 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src ="javascript.js" defer></script>
     <title>Document</title>
 </head>
 <body>
 
+    <div class="calc" id="calc">
 
-    
+<div class="container" id="display">
+    <p></p>
+</div>
+
+    <div class="inputs">
+        <button class = 'AC' id="AC">AC</button>
+        <button class = 'CE' id="CE">CE</button>
+        <button class = "operate" id="divide">÷</button>
+        <button class = "operate" id="multiply">x</button>
+        <button class = "number" id="seven">7</button>
+        <button class = "number" id="eight">8</button>
+        <button class = "number" id="nine">9</button>
+        <button class = "operate" id="subtraction">-</button>
+        <button class = "number" id="four">4</button>
+        <button class = "number" id="five">5</button>
+        <button class = "number" id="six">6</button>
+        <button class = "operate" id="add">+</button>
+        <button class = "number" id="one">1</button>
+        <button class = "number" id="two">2</button>
+        <button class = "number" id="three">3</button>
+        <button class = "equal" id = "edual">=</button>
+        <button class = "number" id = "zero">0</button>
+        <button class = "number" id = "decimal">.</button>
+
+    </div>
+</div>
     
 </body>
 </html>
